[FIX] web: fix `listView` text truncate on wrong cells
This commit fixes the text truncate that should not be applied on some of
the cells inside the `listView` (causing a dot next to graphical elements).

This issue was created by this commit (a6dd707).
The inline-block display of o_field_widget was the source of the issue.

We also changed the called mixin text-overflow to text-truncate for
cleaner code. The vertical align top is then removed, and we added a
vertical align middle to fix the wrong alignement of some elements.

Thoses modifications also fix the issue with where the tags were cut in
the `listView` when the window was smaller.

task-3455121
Related to task-3282848

--- a/addons/web/static/src/legacy/scss/fields.scss
+++ b/addons/web/static/src/legacy/scss/fields.scss
@@ -68,7 +68,7 @@
 .o_field_widget {
     // Default display and alignment of widget and internal <input/>
     text-align: inherit;
-    display: inline-block;
+    display: var(--fieldWidget-display, inline-block);
 
     textarea.o_input,
     input.o_input {
